<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travel Log</string>
    <string name="map_action">Map</string>
    <string name="about_string">About</string>
    <string name="exit_action">Exit</string>
    <string name="load_action">Loading</string>
    <string name="edit_action">Edit</string>
    <string name="yourplaces">Your Places</string>
    <string name="hintprompt">Enter text here</string>
    <string name="editcountry">Country:</string>
    <string name="edityear">Year:</string>
    <string name="editmonth">Month:</string>
    <string name="edittransport">Mode of transport:</string>
    <string name="editdesc">Description:</string>
    <string name="addinfo">Add</string>
    <string name="save_changes">Save</string>
    <string name="deleteall">Delete All</string>
    <string name="back">Go Back</string>
    <string name="deletecountry">Delete</string>
    <string name="goadd">Add Country</string>
    <string name="stats">Travel Stats</string>
    <string name="statsheader">Travel Stats</string>
    <string name="addprompt">You currently have no entries.</string>
    
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    
    <string-array name="transport">
        <item>Plane</item>
        <item>Ferry</item>
        <item>Bus</item>
        <item>Car</item>
        <item>Train</item>
    </string-array>
    
    <string-array name="all_the_countries">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cayman Islands</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Dubai</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>England</item>
        <item>El Salvador</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Ivory Coast</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kuwait</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Korea</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Lucia</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Scotland</item>
        <item>Senegal</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Switzerland</item>
        <item>Sweden</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>The Canary Islands</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Virgin Islands</item>
        <item>Wales</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>USA</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    
    <color name="white">#FFFFFF</color>
    <color name="blue">#33E5B5</color>
    <color name="yellow">#FFBB33</color>
    <color name="black">#000000</color>
    <color name="red">#cc0000</color>
    <color name="dark_blue">#00008b</color>
    <color name="orange">#ffa500</color>
    <color name="dark_green">#17660B</color>
    <color name="bright_blue">#1c86ee</color>

</resources>