<?xml version="1.0" encoding="utf-8"?>

<!-- The stats screen consists of two buttons and two 
	 textviews. One to display the header and the other 
	 to display the stats. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/custom_font"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/statsheader"
        android:textColor="@color/black"
        android:textSize="45sp" />
    
    <Button
        android:id="@+id/back"
        style="@style/AppBaseTheme"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back"
        android:textColor="@color/white"
        android:typeface="sans" />
    
    <Button
		android:id="@+id/delete"
		style="@style/AppBaseTheme"
		android:layout_width="150dp"
		android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
		android:text="@string/deleteall"
		android:textColor="@color/white"
		android:typeface="sans" />

    <!-- stats textview -->    <TextView
        android:id="@+id/stat_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_font"
        android:layout_above="@+id/back"
        android:layout_centerHorizontal="true"
        android:textIsSelectable="true"
        android:layout_marginTop="23dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"
        android:gravity="center_horizontal"
        android:textColor="@color/red"
        android:textSize="25sp" />

</RelativeLayout>